// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`job actions kebab tests dropdown open/close tests and details click 1`] = `
<div>
  <div
    aria-label="Job actions dropdown"
    aria-labelledby="Job actions dropdown"
    class="pf-c-dropdown pf-m-align-right"
    data-ouia-component-id="OUIA-Generated-Dropdown-1"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Actions"
      class="pf-c-dropdown__toggle pf-m-plain"
      id="kebab-toggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`job actions kebab tests test job cancel option 1`] = `
<div
  aria-hidden="true"
>
  <div
    aria-label="Job actions dropdown"
    aria-labelledby="Job actions dropdown"
    class="pf-c-dropdown pf-m-align-right"
    data-ouia-component-id="OUIA-Generated-Dropdown-3"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Actions"
      class="pf-c-dropdown__toggle pf-m-plain"
      id="kebab-toggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`job actions kebab tests test reschedule option 1`] = `
<div>
  <div
    aria-label="Job actions dropdown"
    aria-labelledby="Job actions dropdown"
    class="pf-c-dropdown pf-m-align-right"
    data-ouia-component-id="OUIA-Generated-Dropdown-2"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Actions"
      class="pf-c-dropdown__toggle pf-m-plain"
      id="kebab-toggle"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 192 512"
        width="1em"
      >
        <path
          d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
        />
      </svg>
    </button>
  </div>
</div>
`;
